<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue3"
    tools:context=".ui.fragment.PersonalInfoFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_personal_info"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/middle_margin"
        app:cardCornerRadius="@dimen/middle_card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/middle_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_register_fragment1"
                android:textSize="@dimen/middle_title_font_size" />

            <RadioGroup
                android:id="@+id/rg_register_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_padding"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_register_male"
                    android:layout_width="@dimen/radio_img_btn_size"
                    android:layout_height="@dimen/radio_img_btn_size"
                    android:layout_gravity="center"
                    android:background="@drawable/radio_button_male"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/rb_register_famale"
                    android:layout_width="@dimen/radio_img_btn_size"
                    android:layout_height="@dimen/radio_img_btn_size"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/large_padding"
                    android:background="@drawable/radio_button_famale"
                    android:button="@null" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_register_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_padding"
                android:ems="10"
                android:hint="@string/prompt_dob"
                android:inputType="date"
                android:textSize="@dimen/middle_content_font_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_padding"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6">

                    <EditText
                        android:id="@+id/et_register_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ems="10"
                        android:hint="@string/prompt_height"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/middle_content_font_size" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/tv_register_cm"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/middle_content_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_padding"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6">

                    <EditText
                        android:id="@+id/et_register_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ems="10"
                        android:hint="@string/prompt_weight"
                        android:imeActionId="@+id/ime_register_next_page"
                        android:imeActionLabel="@string/action_register_next_page_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/middle_content_font_size" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/tv_register_kg"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/middle_content_font_size" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
